--- a/features/org.springsource.ggts.product/pom.xml
+++ b/features/org.springsource.ggts.product/pom.xml
@@ -55,6 +55,12 @@
 			</properties>
 		</profile>
 		<profile>
+			<id>e43-java8</id>
+			<properties>
+				<sites>http://download.eclipse.org/releases/kepler/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
+			</properties>
+		</profile>
+		<profile>
 			<id>e44</id>
 			<properties>
 				<sites>http://download.eclipse.org/releases/kepler/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
