--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -328,13 +328,13 @@
 
 								<exec executable="codesign">
 								    <arg value="-s"/>
-								    <arg value="Developer ID Application: VMware, Inc"/>
+								    <arg value="Developer ID Application: VMware, Inc."/>
 								    <arg value="${build.destination.cocoa.x86}/sts-${unqualifiedVersion}.${p2.qualifier}/STS.app"/>
 								</exec>
 
 								<exec executable="codesign">
 								    <arg value="-s"/>
-								    <arg value="Developer ID Application: VMware, Inc"/>
+								    <arg value="Developer ID Application: VMware, Inc."/>
 								    <arg value="${build.destination.cocoa.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier}/STS.app"/>
 								</exec>
 
