Add sts.properties.url property definition to sts and ggts products

--- a/plugins/org.springsource.ggts/plugin.xml
+++ b/plugins/org.springsource.ggts/plugin.xml
@@ -98,5 +98,14 @@
 			</presentation>
 		</config>
 	</extension>
+	
+	 <extension
+	       point="com.springsource.sts.core.resources">
+	    <propertyDefinition
+	          id="sts.properties.url"
+	          defaultValue="http://dist.springsource.com/release/STS/discovery/ggts.properties">
+	    </propertyDefinition>
+	 </extension>
+	
    
 </plugin>
