--- a/plugins/org.springsource.sts/plugin.xml
+++ b/plugins/org.springsource.sts/plugin.xml
@@ -98,5 +98,12 @@
 			</presentation>
 		</config>
 	</extension>
+ <extension
+       point="com.springsource.sts.core.resources">
+    <propertyDefinition
+          id="sts.properties.url"
+          defaultValue="http://dist.springsource.com/release/STS/discovery/sts.properties">
+    </propertyDefinition>
+ </extension>
    
 </plugin>
