Use a product property to define 'sts.properties.url' property... instead of sts.core.resource extension point.

--- a/plugins/org.springsource.ggts/plugin.xml
+++ b/plugins/org.springsource.ggts/plugin.xml
@@ -54,6 +54,10 @@
 				name="applicationCSSResources"
 	         	value="platform:/plugin/org.eclipse.platform/images/">
 		  </property>
+		  <property
+		        name="sts.properties.url"
+		        value="http://dist.springsource.com/release/STS/discovery/ggts.properties">
+		  </property>
       </product> 
    </extension>
           
@@ -99,13 +103,4 @@
 		</config>
 	</extension>
 	
-	 <extension
-	       point="com.springsource.sts.core.resources">
-	    <propertyDefinition
-	          id="sts.properties.url"
-	          defaultValue="http://dist.springsource.com/release/STS/discovery/ggts.properties">
-	    </propertyDefinition>
-	 </extension>
-	
-   
 </plugin>
