--- a/plugins/org.springsource.sts/plugin.xml
+++ b/plugins/org.springsource.sts/plugin.xml
@@ -54,6 +54,10 @@
 				name="applicationCSSResources"
 	         	value="platform:/plugin/org.eclipse.platform/images/">
 		  </property>
+		  <property
+		        name="sts.properties.url"
+		        value="http://dist.springsource.com/release/STS/discovery/sts.properties">
+		  </property>
       </product> 
    </extension>
           
@@ -98,12 +102,5 @@
 			</presentation>
 		</config>
 	</extension>
- <extension
-       point="com.springsource.sts.core.resources">
-    <propertyDefinition
-          id="sts.properties.url"
-          defaultValue="http://dist.springsource.com/release/STS/discovery/sts.properties">
-    </propertyDefinition>
- </extension>
    
 </plugin>
