vendor names updated to GoPivotal

--- a/plugins/org.springsource.ggts/plugin.properties
+++ b/plugins/org.springsource.ggts/plugin.properties
@@ -1,5 +1,5 @@
 pluginName=Groovy/Grails Tool Suite
-providerName=SpringSource
+providerName=GoPivotal, Inc.
 
 productName=Groovy/Grails Tool Suite
 productBlurb=Groovy/Grails Tool Suite \n\
