--- a/plugins/org.springsource.sts/plugin.properties
+++ b/plugins/org.springsource.sts/plugin.properties
@@ -1,5 +1,5 @@
 pluginName=Spring Tool Suite
-providerName=SpringSource
+providerName=GoPivotal, Inc.
 
 productName=Spring Tool Suite
 productBlurb=Spring Tool Suite \n\
