fixed wrong property for license in e38 package feature

--- a/features/org.springsource.sts.package.e3.8/feature.properties
+++ b/features/org.springsource.sts.package.e3.8/feature.properties
@@ -19,6 +19,13 @@ This feature installs all Spring Tool Suite features.
 
 # "copyright" property - text of the Copyright
 copyright=\
+Copyright (c) 2013 GoPivotal, Inc.
+
+################ end of copyright property ####################################
+
+# "license" property - text of the "Feature Update License"
+# should be plain text version of license agreement pointed to be "licenseURL"
+license=\
 Eclipse Public License - v 1.0\n\
 \n\
 THE ACCOMPANYING PROGRAM IS PROVIDED UNDER THE TERMS OF THIS ECLIPSE PUBLIC LICENSE ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION OF THE PROGRAM CONSTITUTES RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT.\n\
