STS-3616: updated icon artwork for application window icon + cleanup work

--- a/plugins/org.springsource.ggts/plugin.xml
+++ b/plugins/org.springsource.ggts/plugin.xml
@@ -4,8 +4,8 @@
 
    <extension id="ide" point="org.eclipse.core.runtime.products"> 
       <product name="%productName" application="org.eclipse.ui.ide.workbench" description="%productBlurb"> 
-          <property name="windowImages" value="sts.png,sts32.png,sts48.png,sts64.png,sts128.png"/> 
-          <property name="aboutImage" value="sts_lg.gif"/> 
+          <property name="windowImages" value="ggts16.png,ggts32.png,ggts48.png,ggts64.png,ggts128.png"/> 
+          <property name="aboutImage" value="ggts_lg.gif"/>
           <property name="aboutText" value="%productBlurb"/> 
           <property name="appName" value="%productName"/> 
           <property name="preferenceCustomization" value="plugin_customization.ini"/> 
