--- a/plugins/org.springsource.ggts/build.properties
+++ b/plugins/org.springsource.ggts/build.properties
@@ -9,22 +9,19 @@ bin.includes = META-INF/,\
                plugin_customization.ini,\
                plugin_customization.properties,\
                splash.bmp,\
-               sts.gif,\
-               sts.png,\
-               sts_lg.gif,\
-               sts48.png,\
-               sts48.gif,\
-               sts32.png,\
-               sts32.gif,\
+               ggts_lg.gif,\
                feature_image.png,\
-               sts128.png,\
-               sts64.png,\
                open_source_licenses.txt,\
                OSGI-INF/,\
                lib/,\
                .,\
                content/,\
                introContent.xml,\
-               about.html
+               about.html,\
+               ggts64.png,\
+               ggts48.png,\
+               ggts32.png,\
+               ggts16.png,\
+               ggts128.png
 output.library.jar = bin/
 source.. = src/
