--- a/plugins/org.springsource.sts/build.properties
+++ b/plugins/org.springsource.sts/build.properties
@@ -9,13 +9,9 @@ bin.includes = META-INF/,\
                plugin_customization.ini,\
                plugin_customization.properties,\
                splash.bmp,\
-               sts.gif,\
-               sts.png,\
                sts_lg.gif,\
                sts48.png,\
-               sts48.gif,\
                sts32.png,\
-               sts32.gif,\
                feature_image.png,\
                sts128.png,\
                sts64.png,\
@@ -25,6 +21,7 @@ bin.includes = META-INF/,\
                .,\
                content/,\
                introContent.xml,\
-               about.html
+               about.html,\
+               sts16.png
 output.library.jar = bin/
 source.. = src/
