--- a/plugins/org.springsource.ggts/about.properties
+++ b/plugins/org.springsource.ggts/about.properties
@@ -10,7 +10,7 @@ Version: @QUALIFIER@\n\
 Build Id: @BUILD_ID@\n\
 \n\
 Copyright (c) 2007 - 2013 GoPivotal, Inc.\n\
-All rights reserved. Visit http://springsource.org/ggts\n\
+All rights reserved. Visit https://spring.io/tools/ggts\n\
 \n\
 This product includes software developed by the\n\
 Apache Software Foundation http://www.apache.org
