--- a/plugins/org.springsource.sts/about.properties
+++ b/plugins/org.springsource.sts/about.properties
@@ -9,7 +9,7 @@ title=Spring Tool Suite \n\
 Version: @QUALIFIER@\n\
 Build Id: @BUILD_ID@\n\
 \n\
-Copyright (c) 2007 - 2013 GoPivotal, Inc.\n\
+Copyright (c) 2007 - 2014 Pivotal Software Inc.\n\
 All rights reserved. Visit http://spring.io/tools/sts\n\
 \n\
 This product includes software developed by the\n\
