--- a/releng/org.springsource.sts.distribution-installer/wrappers-sts/mac/app-template/Contents/Info.plist
+++ b/releng/org.springsource.sts.distribution-installer/wrappers-sts/mac/app-template/Contents/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleIconFile</key>
-	<string>Eclipse.icns</string>
+	<string>sts.icns</string>
 	<key>Java</key>
 	<dict>
 		<key>MainClass</key>
