--- a/plugins/org.springsource.ggts/about.properties
+++ b/plugins/org.springsource.ggts/about.properties
@@ -9,7 +9,7 @@ title=Groovy/Grails Tool Suite \n\
 Version: @QUALIFIER@\n\
 Build Id: @BUILD_ID@\n\
 \n\
-Copyright (c) 2007 - 2013 GoPivotal, Inc.\n\
+Copyright (c) 2007 - 2014 Pivotal Software, Inc.\n\
 All rights reserved. Visit https://spring.io/tools/ggts\n\
 \n\
 This product includes software developed by the\n\
