--- a/plugins/org.springsource.ggts/plugin.properties
+++ b/plugins/org.springsource.ggts/plugin.properties
@@ -1,5 +1,5 @@
 pluginName=Groovy/Grails Tool Suite
-providerName=GoPivotal, Inc.
+providerName=Pivotal Software, Inc.
 
 productName=Groovy/Grails Tool Suite
 productBlurb=Groovy/Grails Tool Suite \n\
@@ -7,8 +7,8 @@ productBlurb=Groovy/Grails Tool Suite \n\
 Version: @QUALIFIER@\n\
 Build Id: @BUILD_ID@\n\
 \n\
-Copyright (c) 2007 - 2013 GoPivotal, Inc.\n\
-All rights reserved. Visit http://springsource.org/ggts\n\
+Copyright (c) 2007 - 2014 Pivotal Software, Inc.\n\
+All rights reserved. Visit http://spring.io/tools/ggts\n\
 \n\
 This product includes software developed by the\n\
 Apache Software Foundation http://www.apache.org
