--- a/plugins/org.springsource.sts/plugin.properties
+++ b/plugins/org.springsource.sts/plugin.properties
@@ -1,5 +1,5 @@
 pluginName=Spring Tool Suite
-providerName=Pivotal Software Inc.
+providerName=Pivotal Software, Inc.
 
 productName=Spring Tool Suite
 productBlurb=Spring Tool Suite \n\
@@ -7,7 +7,7 @@ productBlurb=Spring Tool Suite \n\
 Version: @QUALIFIER@\n\
 Build Id: @BUILD_ID@\n\
 \n\
-Copyright (c) 2007 - 2014 Pivotal Software Inc.\n\
+Copyright (c) 2007 - 2014 Pivotal Software, Inc.\n\
 All rights reserved. Visit http://spring.io/tools/sts\n\
 \n\
 This product includes software developed by the\n\
