--- a/features/org.springsource.sts/feature.properties
+++ b/features/org.springsource.sts/feature.properties
@@ -8,7 +8,7 @@
 featureName=Spring Tool Suite (required)
 
 # "providerName" property - name of the company that provides the feature
-providerName=GoPivotal, Inc.
+providerName=Pivotal Software, Inc.
 
 # "updateSiteName" property - label for the update site
 updateSiteName=SpringSource Tool Suite Updates
@@ -19,7 +19,7 @@ This feature is required to install the Spring Tool Suite
 
 # "copyright" property - text of the Copyright
 copyright=\
-Copyright (c) 2013 GoPivotal, Inc.
+Copyright (c) 2013 Pivotal Software, Inc.
 
 ################ end of copyright property ####################################
 
