--- a/features/org.springsource.ggts.package.e4.4/feature.properties
+++ b/features/org.springsource.ggts.package.e4.4/feature.properties
@@ -8,7 +8,7 @@
 featureName=Groovy/Grails Tool Suite Package
 
 # "providerName" property - name of the company that provides the feature
-providerName=GoPivotal, Inc.
+providerName=Pivotal Software, Inc.
 
 # "updateSiteName" property - label for the update site
 updateSiteName=SpringSource Tool Suite Updates
@@ -19,7 +19,7 @@ This feature installs all Groovy/Grails Tool Suite features.
 
 # "copyright" property - text of the Copyright
 copyright=\
-Copyright (c) 2013 GoPivotal, Inc.
+Copyright (c) 2013 Pivotal Software, Inc.
 
 ################ end of copyright property ####################################
 
