--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -15,6 +15,14 @@
 	<properties>
 		<dist.accessKey>${accessKey}</dist.accessKey>
 		<dist.secretKey>${secretKey}</dist.secretKey>
+		
+		<build.destination.cocoa.x86>target/products/org.springsource.sts.ide/macosx/cocoa/x86</build.destination.cocoa.x86>
+		<build.destination.cocoa.x86_64>target/products/org.springsource.sts.ide/macosx/cocoa/x86_64</build.destination.cocoa.x86_64>
+		<build.destination.linux.x86>target/products/org.springsource.sts.ide/linux/gtk/x86</build.destination.linux.x86>
+		<build.destination.linux.x86_64>target/products/org.springsource.sts.ide/linux/gtk/x86_64</build.destination.linux.x86_64>
+		<build.destination.win.x86>target/products/org.springsource.sts.ide/win32/win32/x86</build.destination.win.x86>
+		<build.destination.win.x86_64>target/products/org.springsource.sts.ide/win32/win32/x86_64</build.destination.win.x86_64>
+		
 	</properties>
 
 	<profiles>
