--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@ Optional parameters:
 
 	<profiles>
 		<profile>
+			
 			<id>e37</id>
 			<properties>
 				<p2.repository.name>SpringSource Tool Suite for Eclipse 3.7</p2.repository.name>
@@ -137,6 +138,7 @@ Optional parameters:
 				<module>features/org.springsource.ggts.package.e3.7</module>
 			</modules>
 		</profile>
+		
 		<profile>
 			<id>e38</id>
 			<properties>
@@ -206,6 +208,7 @@ Optional parameters:
 				<module>features/org.springsource.ggts.package.e3.8</module>
 			</modules>
 		</profile>
+		
 		<profile>
 			<id>e42</id>
 			<properties>
@@ -305,6 +308,11 @@ Optional parameters:
 					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20130827064939/repository/</url>
 				</repository>
 				<repository>
+					<id>java8-patches</id>
+					<layout>p2</layout>
+					<url>http://build.eclipse.org/eclipse/builds/4P/siteDir/updates/4.3-P-builds</url>
+				</repository>
+				<repository>
 					<id>mylyn</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/mylyn/releases/latest</url>
@@ -322,7 +330,7 @@ Optional parameters:
 				<repository>
 					<id>groovy</id>
 					<layout>p2</layout>
-					<url>http://dist.springsource.org/milestone/GRECLIPSE/e4.3/</url>
+					<url>http://dist.springsource.org/snapshot/GRECLIPSE/e4.3-j8/</url>
 				</repository>
 				<repository>
 					<id>atlassian</id>
@@ -348,86 +356,6 @@ Optional parameters:
 			<modules>
 				<module>features/org.springsource.sts.package.e4.3</module>
 				<module>features/org.springsource.ggts.package.e4.3</module>
-			</modules>
-		</profile>
-
-		<profile>
-			<id>e43-java8</id>
-			<properties>
-				<p2.repository.name>SpringSource Tool Suite for Eclipse 4.3</p2.repository.name>
-				<groovy.compiler.feature>org.codehaus.groovy18.feature.feature.group</groovy.compiler.feature>
-				<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
-			</properties>
-			<repositories>
-				<repository>
-					<id>platform</id>
-					<layout>p2</layout>
-					<url>http://download.eclipse.org/eclipse/updates/4.3/</url>
-				</repository>
-				<repository>
-					<id>kepler</id>
-					<layout>p2</layout>
-					<url>http://download.eclipse.org/releases/kepler/</url>
-				</repository>
-				<repository>
-					<id>kepler-updates</id>
-					<layout>p2</layout>
-					<url>http://download.eclipse.org/releases/maintenance/</url>
-				</repository>
-				<repository>
-					<id>java8-patches</id>
-					<layout>p2</layout>
-					<url>http://build.eclipse.org/eclipse/builds/4P/siteDir/updates/4.3-P-builds</url>
-				</repository>
-				<repository>
-					<id>orbit</id>
-					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20130827064939/repository/</url>
-				</repository>
-				<repository>
-					<id>mylyn</id>
-					<layout>p2</layout>
-					<url>http://download.eclipse.org/mylyn/releases/latest</url>
-				</repository>
-				<repository>
-					<id>ajdt</id>
-					<layout>p2</layout>
-					<url>http://download.eclipse.org/tools/ajdt/43/dev/update</url>
-				</repository>
-				<repository>
-					<id>swtbot</id>
-					<layout>p2</layout>
-					<url>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site/</url>
-				</repository>
-				<repository>
-					<id>groovy</id>
-					<layout>p2</layout>
-					<url>http://dist.springsource.org/milestone/GRECLIPSE/e4.3/</url>
-				</repository>
-				<repository>
-					<id>atlassian</id>
-					<layout>p2</layout>
-					<url>http://update.atlassian.com/atlassian-eclipse-plugin/rest/e3.6</url>
-				</repository>
-				<repository>
-					<id>maven-wtp</id>
-					<layout>p2</layout>
-					<url>http://download.eclipse.org/m2e-wtp/releases/kepler</url>
-				</repository>
-				<repository>
-					<id>maven-extras-mirror</id>
-					<layout>p2</layout>
-					<url>http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/</url>
-				</repository>
-				<repository>
-					<id>eclipse-integration-commons</id>
-					<layout>p2</layout>
-					<url>http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}/e3.7/</url>
-				</repository>
-			</repositories>
-			<modules>
-				<module>features/org.springsource.sts.package.e4.3-java8</module>
-				<module>features/org.springsource.ggts.package.e4.3-java8</module>
 			</modules>
 		</profile>
 
