--- a/features/org.springsource.ggts.package.e4.4/feature.properties
+++ b/features/org.springsource.ggts.package.e4.4/feature.properties
@@ -11,7 +11,7 @@ featureName=Groovy/Grails Tool Suite Package
 providerName=Pivotal Software, Inc.
 
 # "updateSiteName" property - label for the update site
-updateSiteName=SpringSource Tool Suite Updates
+updateSiteName=Spring Tool Suite Updates
 
 # "description" property - description of the feature
 description=\
@@ -19,7 +19,7 @@ This feature installs all Groovy/Grails Tool Suite features.
 
 # "copyright" property - text of the Copyright
 copyright=\
-Copyright (c) 2013 Pivotal Software, Inc.
+Copyright (c) 2014 Pivotal Software, Inc.
 
 ################ end of copyright property ####################################
 
